# server/router/system/sys_auto_code.go
@@ -31,6 +31,7 @@ func (s *AutoCodeRouter) InitAutoCodeRouter(Router *gin.RouterGroup, RouterPubli
 		autoCodeRouter.POST("delPackage", autoCodePackageApi.Delete)
 		autoCodeRouter.POST("createPackage", autoCodePackageApi.Create)
 		autoCodeRouter.POST("saveAIWorkflowSession", aiWorkflowSessionApi.Save)
+		autoCodeRouter.POST("aiWorkflowChat", autoCodeApi.WorkflowChat)
 		autoCodeRouter.POST("getAIWorkflowSessionList", aiWorkflowSessionApi.GetList)
 		autoCodeRouter.POST("getAIWorkflowSessionDetail", aiWorkflowSessionApi.GetDetail)
 		autoCodeRouter.POST("deleteAIWorkflowSession", aiWorkflowSessionApi.Delete)
